[build-system]
requires = ["setuptools<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tp-http-request-response-parser"
version = "2025.8.30"
description = "Parse/ Unparse the HTTP Request/ Response"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
keywords = ["TPCyberSec", "HTTP Request Parser", "HTTP Response Parser"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: Jython"
]

authors = [
  { name = "TP Cyber Security", email = "tpcybersec2023@gmail.com" }
]

dependencies = [
  "json-duplicate-keys>=2025.8.19"
]

[project.urls]
Homepage = "https://github.com/TPCyberSec/TP-HTTP-Request-Response-Parser"

[tool.setuptools]
packages = ["tp_http_request_response_parser"]