[build-system]
requires = ["setuptools<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tp-http-request-response-parser"
version = "2026.5.18"
description = "Parse/ Unparse the HTTP Request/ Response"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
keywords = ["TPCyberSec", "HTTP Request Parser", "HTTP Response Parser"]

classifiers = [
	"Programming Language :: Python :: 3"
]

authors = [
	{ name = "TP Cyber Security", email = "tpcybersec2023@gmail.com" }
]

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = { file = [ "requirements.txt" ] }

[project.urls]
Homepage = "https://github.com/TPCyberSec/TP-HTTP-Request-Response-Parser"

[tool.setuptools.packages.find]
where = ["."]
include = ["TP_HTTP_Request_Response_Parser"]